[FIX] - fix nouvelle API + ajout fichier conf

--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>MyMusic</title>
-  <base href="/mymusic/www/" />
+  <base href="/" />
 
   <link rel="icon" type="image/png" href="img/logo.png" />
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
@@ -123,6 +123,7 @@
   <script src="bower_components/bootstrap-fileinput/js/locales/fr.js"></script>
 
   <script src="js/app.js"></script>
+  <script src="js/config.js"></script>
   <script src="js/directives/directives.js"></script>
   <script src="js/filters/filters.js"></script>
   <script src="js/services/services.js"></script>
