[FACTORY] - passage au factory

--- a/www/index.html
+++ b/www/index.html
@@ -128,6 +128,10 @@
   <script src="js/directives/directives.js"></script>
   <script src="js/filters/filters.js"></script>
   <script src="js/services/services.js"></script>
+  <script src="js/services/musique.js"></script>
+  <script src="js/services/playlist.js"></script>
+  <script src="js/services/utilisateur.js"></script>
+  <script src="js/services/session.js"></script>
   <script src="js/controllers/main.js"></script>
   <script src="js/controllers/home.js"></script>
   <script src="js/controllers/musique.js"></script>
