--- a/www/index.html
+++ b/www/index.html
@@ -3,13 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <title>MyMusic</title>
-  <base href="/mymusic/www/" />
+  <base href="/mymusic/www/dist/" />
 
   <link rel="icon" type="image/png" href="img/logo.png" />
-  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="bower_components/bootstrap-fileinput/css/fileinput.min.css" />
-  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 
 <body ng-controller="mainController">
@@ -113,29 +110,6 @@
 
     <div ng-view></div>
 </div>
-
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="bower_components/angular/angular.min.js"></script>
-  <script src="bower_components/angular-route/angular-route.min.js"></script>
-  <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
-  <script src="bower_components/angular-soundmanager2/dist/angular-soundmanager2.min.js"></script>
-  <script src="bower_components/bootstrap-fileinput/js/fileinput.min.js"></script>
-  <script src="bower_components/bootstrap-fileinput/js/locales/fr.js"></script>
-
-  <script src="js/app.js"></script>
-  <script src="js/config.js"></script>
-  <script src="js/directives/directives.js"></script>
-  <script src="js/filters/filters.js"></script>
-  <script src="js/services/services.js"></script>
-  <script src="js/services/musique.js"></script>
-  <script src="js/services/playlist.js"></script>
-  <script src="js/services/utilisateur.js"></script>
-  <script src="js/services/session.js"></script>
-  <script src="js/controllers/main.js"></script>
-  <script src="js/controllers/home.js"></script>
-  <script src="js/controllers/musique.js"></script>
-  <script src="js/controllers/playlist.js"></script>
-
+<script src="app.js"></script>
 </body>
 </html>
