--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>MyMusic</title>
-  <base href="/mymusic/www/dist/" />
-
+  <base href="/" />
   <link rel="icon" type="image/png" href="img/logo.png" />
   <link rel="stylesheet" href="main.css" />
 </head>
