--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <title>MyMusic</title>
-  <base href="/" />
+  <base href="/mymusic/dist/" />
   <link rel="icon" type="image/png" href="img/logo.png" />
-  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="css/main.css" />
 </head>
 
 <body ng-controller="mainController">
