--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="."><i class="fa fa-home"></i> Accueil</a></li>
         <li><a href="musiques"><i class="fa fa-music"></i> Musiques</a></li>
         <li><a href="playlists"><i class="fa fa-list"></i> Playlists</a></li>
-        <li ng-show="isLogged"><a href="parametre"><i class="fa fa-gears"></i> Paramètres</a></li>
+        <!--<li ng-show="isLogged"><a href="parametre"><i class="fa fa-gears"></i> Paramètres</a></li>-->
         <li ng-show="!isLogged"><a href="identification"><i class="fa fa-power-off" aria-hidden="true"></i> Connexion</a></li>
         <li class="dropdown" ng-show="isLogged">
           <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> {{ utilisateur.pseudo }}</a>
@@ -49,46 +49,50 @@
           <h2>À l'écoute: {{ currentPlaying.title }} <span ng-if="currentPlaying.artist">de {{ currentPlaying.artist }}</span> <small>{{ currentPostion }} / {{ currentDuration }}</small></h1>
         </div>
 
-        <div class="col-xs-6 col-md-3">
-          <a class="thumbnail">
-            <img ng-if="currentPlaying.image" ng-src="{{ currentPlaying.image }}">
-            <img ng-if="!currentPlaying.image" src="img/no-media.gif">
-          </a>
-        </div>
+        <div class="row">
+          <div class="col-xs-3">
+            <a class="thumbnail">
+              <img ng-if="currentPlaying.image" ng-src="{{ currentPlaying.image }}">
+              <img ng-if="!currentPlaying.image" src="img/no-media.gif">
+            </a>
+          </div>
 
-        <div class="progress" seek-track>
-          <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" ng-style="{width : ( progress + '%' ) }">
-            {{ currentPostion }}
+          <div class="col-xs-9">
+            <div class="progress" seek-track>
+              <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" ng-style="{width : ( progress + '%' ) }">
+                {{ currentPostion }}
+              </div>
+            </div>
+
+            <div class="btn-group" role="group">
+              <button play-music ng-show="!isPlaying" class="btn btn-default"><span class="glyphicon glyphicon-play" aria-hidden="true"></span></button>
+              <button pause-music ng-show="isPlaying" class="btn btn-default"><span class="glyphicon glyphicon-pause" aria-hidden="true"></span></button>
+              <button stop-music ng-show="isPlaying" class="btn btn-default"><span class="glyphicon glyphicon-stop" aria-hidden="true"></span></button>
+              <button prev-track class="btn btn-default"><span class="glyphicon glyphicon-step-backward" aria-hidden="true"></span></button>
+              <button next-track class="btn btn-default"><span class="glyphicon glyphicon-step-forward" aria-hidden="true"></span></button>
+              <button repeat-music class="btn btn-default" ng-class="{disabled: !repeat}"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+            </div>
+
+            <div class="btn-group" role="group">
+              <a class="btn btn-default disabled">Volume: {{ volume }}</a>
+              <button music-volume data-type="decrease" class="btn btn-default"><span class="glyphicon glyphicon-volume-down" aria-hidden="true"></span></button>
+              <button music-volume data-type="increase" class="btn btn-default"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></button>
+              <button mute-music class="btn btn-default" ng-class="{disabled: !mute}"><span class="glyphicon glyphicon-volume-off" aria-hidden="true"></button>
+            </div>
+
+            <div class="btn-group" role="group">
+              <button clear-playlist class="btn btn-default"><span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></button>
+              <button mix-playlist class="btn btn-default"><span class="glyphicon glyphicon-random" aria-hidden="true"></button>
+            </div>
+            <br/><br/>
+            <form class="form-inline">
+              <div class="form-group">
+                <label for="timer">Minuteur (par musique) : </label>
+                <input type="time" id="timer" class="form-control" placeholder="Timer" ng-model="timer"/>
+              </div>
+            </form>
           </div>
         </div>
-
-        <div class="btn-group" role="group">
-          <button play-music ng-show="!isPlaying" class="btn btn-default"><span class="glyphicon glyphicon-play" aria-hidden="true"></span></button>
-          <button pause-music ng-show="isPlaying" class="btn btn-default"><span class="glyphicon glyphicon-pause" aria-hidden="true"></span></button>
-          <button stop-music ng-show="isPlaying" class="btn btn-default"><span class="glyphicon glyphicon-stop" aria-hidden="true"></span></button>
-          <button prev-track class="btn btn-default"><span class="glyphicon glyphicon-step-backward" aria-hidden="true"></span></button>
-          <button next-track class="btn btn-default"><span class="glyphicon glyphicon-step-forward" aria-hidden="true"></span></button>
-          <button repeat-music class="btn btn-default" ng-class="{disabled: !repeat}"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
-        </div>
-
-        <div class="btn-group" role="group">
-          <a class="btn btn-default disabled">Volume: {{ volume }}</a>
-          <button music-volume data-type="decrease" class="btn btn-default"><span class="glyphicon glyphicon-volume-down" aria-hidden="true"></span></button>
-          <button music-volume data-type="increase" class="btn btn-default"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></button>
-          <button mute-music class="btn btn-default" ng-class="{disabled: !mute}"><span class="glyphicon glyphicon-volume-off" aria-hidden="true"></button>
-        </div>
-
-        <div class="btn-group" role="group">
-          <button clear-playlist class="btn btn-default"><span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></button>
-          <button mix-playlist class="btn btn-default"><span class="glyphicon glyphicon-random" aria-hidden="true"></button>
-        </div>
-        <br/><br/>
-        <form class="form-inline">
-        <div class="form-group">
-          <label for="timer">Minuteur (par musique) : </label>
-          <input type="time" id="timer" class="form-control" placeholder="Timer" ng-model="timer"/>
-        </div>
-      </form>
       </div>
       <div class="col-sm-6">
         <div class="panel panel-primary">
