--- a/index.html
+++ b/index.html
@@ -1,126 +1,20 @@
 <!DOCTYPE html>
 <html ng-app="mymusicApp" lang="fr">
-<head>
-  <meta charset="utf-8" />
-  <title>MyMusic</title>
-  <base href="/" />
-  <link rel="icon" type="image/png" href="img/logo.png" />
-  <link rel="stylesheet" href="css/main.css" />
-</head>
-
-<body ng-controller="mainController">
-  <nav class="navbar navbar-default">
-    <div class="container">
-      <div class="navbar-header">
-        <a class="navbar-brand" href=".">
-          <span><img src="img/logo.png" height="30"></span> MyMusic
-        </a>
+  <head>
+    <meta charset="utf-8" />
+    <title>MyMusic</title>
+    <base href="/" />
+    <link rel="icon" type="image/png" href="img/logo.png" />
+  </head>
+  <body ng-controller="mainController">
+      <menu></menu>
+      <div id="main">
+        <div class="row" ng-show="showPlayer">
+          <ng-include src="'components/player.html'"></ng-include>
+        </div>
+        <div ng-view></div>
       </div>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="."><i class="fa fa-home"></i> Accueil</a></li>
-        <li><a href="musiques"><i class="fa fa-music"></i> Musiques</a></li>
-        <li><a href="playlists"><i class="fa fa-list"></i> Playlists</a></li>
-        <!--<li ng-show="isLogged"><a href="parametre"><i class="fa fa-gears"></i> Paramètres</a></li>-->
-        <li ng-show="!isLogged"><a href="identification"><i class="fa fa-power-off" aria-hidden="true"></i> Connexion</a></li>
-        <li class="dropdown" ng-show="isLogged">
-          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> {{ utilisateur.pseudo }}</a>
-          <ul class="dropdown-menu">
-            <li><a href="mon-compte"><i class="fa fa-user"></i> Mon Compte</a></li>
-            <li><a ng-click="logout()"><i class="fa fa-sign-out"></i> Déconnexion</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left ng-valid ng-dirty" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control ng-valid ng-dirty" ng-model="search" placeholder="Filtrer les résultats" autofocus="true">
-          <span class="glyphicon glyphicon-remove ng-hide" ng-click="search = ''" ng-show="search.length"></span>
-        </div>
-      </form>
-    </div>
-  </nav>
-
-  <div id="main">
-
-    <div class="row" ng-show="showPlayer">
-      <div class="col-md-6">
-        <sound-manager></sound-manager>
-
-        <div class="page-header">
-          <h2>À l'écoute: {{ currentPlaying.title }} <span ng-if="currentPlaying.artist">de {{ currentPlaying.artist }}</span> <small>{{ currentPostion }} / {{ currentDuration }}</small></h1>
-        </div>
-
-        <div class="row">
-          <div class="col-xs-3">
-            <a class="thumbnail">
-              <img ng-if="currentPlaying.image" ng-src="{{ currentPlaying.image }}">
-              <img ng-if="!currentPlaying.image" src="img/no-media.gif">
-            </a>
-          </div>
-
-          <div class="col-xs-9">
-            <div class="progress" seek-track>
-              <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" ng-style="{width : ( progress + '%' ) }">
-                {{ currentPostion }}
-              </div>
-            </div>
-
-            <div class="btn-group" role="group">
-              <button play-music ng-show="!isPlaying" class="btn btn-default"><span class="glyphicon glyphicon-play" aria-hidden="true"></span></button>
-              <button pause-music ng-show="isPlaying" class="btn btn-default"><span class="glyphicon glyphicon-pause" aria-hidden="true"></span></button>
-              <button stop-music ng-show="isPlaying" class="btn btn-default"><span class="glyphicon glyphicon-stop" aria-hidden="true"></span></button>
-              <button prev-track class="btn btn-default"><span class="glyphicon glyphicon-step-backward" aria-hidden="true"></span></button>
-              <button next-track class="btn btn-default"><span class="glyphicon glyphicon-step-forward" aria-hidden="true"></span></button>
-              <button repeat-music class="btn btn-default" ng-class="{disabled: !repeat}"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
-            </div>
-
-            <div class="btn-group" role="group">
-              <a class="btn btn-default disabled">Volume: {{ volume }}</a>
-              <button music-volume data-type="decrease" class="btn btn-default"><span class="glyphicon glyphicon-volume-down" aria-hidden="true"></span></button>
-              <button music-volume data-type="increase" class="btn btn-default"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></button>
-              <button mute-music class="btn btn-default" ng-class="{disabled: !mute}"><span class="glyphicon glyphicon-volume-off" aria-hidden="true"></button>
-            </div>
-
-            <div class="btn-group" role="group">
-              <button clear-playlist class="btn btn-default"><span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></button>
-              <button mix-playlist class="btn btn-default"><span class="glyphicon glyphicon-random" aria-hidden="true"></button>
-            </div>
-            <br/><br/>
-            <form class="form-inline">
-              <div class="form-group">
-                <label for="timer">Minuteur (par musique) : </label>
-                <input type="time" id="timer" class="form-control" placeholder="Timer" ng-model="timer"/>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title clearfix"><span class="pull-left">En direct</span></h3>
-          </div>
-          <div style="overflow-y:auto;height:200px">
-
-          <table class="table table-condensed table-striped header-fixed" style="table-layout:fixed">
-            <tbody>
-              <tr class="clickable-row" ng-repeat="musique in playlist">
-                <td play-from-playlist="musique"><a href="#">{{ musique.title }}</a><span ng-if="currentPlaying.id == musique.id"> <small>(actuelle)</small></span></td>
-
-                <td style="width:60px">{{ musique.length | secondsToDateTime | date:'mm:ss' }}</td>
-                <td remove-from-playlist="musique" data-index="{{$index}}" style="width:40px">
-                  <small><span class="glyphicon glyphicon-remove" aria-hidden="true"></small>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-
-        </div>
-      </div>
-    </div>
-
-    <div ng-view></div>
-</div>
-<script src="app.js"></script>
-</body>
+    </body>
 </html>
+<link rel="stylesheet" href="css/main.css" />
+<script src="app.js"></script>
