Feat: search seaction on youtube + soundcloud

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>MyMusic</title>
-    <base href="/" />
+    <base href="http://localhost/mymusic/dist/" />
     <link rel="icon" type="image/png" href="img/logo.png" />
   </head>
   <body ng-controller="mainController">
